// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="bottom" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <kol-link-wc>
      <!---->
      <a class="kol-link kol-link--external-link kol-link--inline kol-link--normal" href="https://example.com" rel="noopener" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <span class="icon kol-icon left">
              <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
            </span>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <span class="kol-icon kol-link__icon">
          <i aria-label="kol-open-link-in-tab" class="kol-icon__icon kolicon-link-external" part="icon" role="img"></i>
        </span>
      </a>
    </kol-link-wc>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="left" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <kol-link-wc>
      <!---->
      <a class="kol-link kol-link--external-link kol-link--inline kol-link--normal" href="https://example.com" rel="noopener" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <span class="icon kol-icon left">
              <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
            </span>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <span class="kol-icon kol-link__icon">
          <i aria-label="kol-open-link-in-tab" class="kol-icon__icon kolicon-link-external" part="icon" role="img"></i>
        </span>
      </a>
    </kol-link-wc>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="right" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <kol-link-wc>
      <!---->
      <a class="kol-link kol-link--external-link kol-link--inline kol-link--normal" href="https://example.com" rel="noopener" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <span class="icon kol-icon left">
              <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
            </span>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <span class="kol-icon kol-link__icon">
          <i aria-label="kol-open-link-in-tab" class="kol-icon__icon kolicon-link-external" part="icon" role="img"></i>
        </span>
      </a>
    </kol-link-wc>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="top" _hideLabel=true 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <kol-link-wc>
      <!---->
      <a aria-label="Label (kol-open-link-in-tab)" class="kol-link kol-link--external-link kol-link--hide-label kol-link--inline kol-link--normal" href="https://example.com" rel="noopener" target="self">
        <span class="kol-link__text kol-span kol-span--hide-label">
          <span class="kol-span__container">
            <span class="icon kol-icon left">
              <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="" class="kol-icon kol-link__icon">
          <i aria-hidden="true" class="kol-icon__icon kolicon-link-external" part="icon" role="presentation"></i>
        </span>
      </a>
      <kol-tooltip-wc _align="top" _label="Label" aria-hidden="true" class="kol-link__tooltip"></kol-tooltip-wc>
    </kol-link-wc>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="top" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <kol-link-wc>
      <!---->
      <a class="kol-link kol-link--external-link kol-link--inline kol-link--normal" href="https://example.com" rel="noopener" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <span class="icon kol-icon left">
              <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
            </span>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <span class="kol-icon kol-link__icon">
          <i aria-label="kol-open-link-in-tab" class="kol-icon__icon kolicon-link-external" part="icon" role="img"></i>
        </span>
      </a>
    </kol-link-wc>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <kol-link-wc>
      <!---->
      <a class="kol-link kol-link--external-link kol-link--inline kol-link--normal" href="https://example.com" rel="noopener" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <span class="icon kol-icon left">
              <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
            </span>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <span class="kol-icon kol-link__icon">
          <i aria-label="kol-open-link-in-tab" class="kol-icon__icon kolicon-link-external" part="icon" role="img"></i>
        </span>
      </a>
    </kol-link-wc>
  </template>
</kol-link>
`;

exports[`kol-link should render with _label="Label" _href="" _download="download-file.zip" _target="blank" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <kol-link-wc>
      <!---->
      <a class="kol-link kol-link--external-link kol-link--inline kol-link--normal" download="download-file.zip" href="javascript:void(0);" rel="noopener" target="blank">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <span class="kol-icon kol-link__icon">
          <i aria-label="kol-open-link-in-tab" class="kol-icon__icon kolicon-link-external" part="icon" role="img"></i>
        </span>
      </a>
    </kol-link-wc>
  </template>
</kol-link>
`;
